k8s/istio/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/api/auth"
      route:
        - destination:
            host: auth-service
            port:
              number: 5000
    - match:
        - uri:
            prefix: "/api/films"
      route:
        - destination:
            host: films-service
            port:
              number: 5001
